# nft-links

./: .gitignore  .gitpod.yml  erc1155.example.json  erc1155.json  package-lock.json  package.json  readme.md
.github/workflows/: supabase-dry-run.yaml  supabase.yaml
.next/: trace
.next/cache/: .tsbuildinfo  next-server.js.nft.json
.next/server/: _error.js
blockchain/contracts/: .env.example  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
bots/github-bot/: CODE_OF_CONDUCT.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
components/: AuthComponent.tsx  Layout.tsx  Menu.tsx  NFTList.tsx  NFTListSkeleton.tsx  NavbarMobile.tsx  NavigationBar.tsx  navbar.tsx
components/layout/: layout.tsx
docs/: ideas.md  niftios.md
frontend/: .env-example  .eslintrc.json  .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json
frontend/api/icp/: Cargo.toml  mint.rs  types.rs
frontend/components/: AuthComponent.tsx  Layout.tsx  Menu.tsx  NFTList.tsx  NFTListSkeleton.tsx  NavbarMobile.tsx  SiteHeaderInfo.tsx
frontend/hooks/: useFiles.tsx  useGithubRepos.tsx  useGithubUserData.tsx  useGithubUserToken.tsx  useGraphAuthTokens.tsx  useGraphProjects.tsx  useGroups.tsx  useIntegrationsGithub.tsx  useNfts.tsx  useRewardProgram.tsx  useSubgraphStatus.tsx  useWallets.tsx
frontend/middleware/: middleware.js
graph-server/: .local.env  .mumbai.env  docker-compose.yml
model/: storeModel.ts
pages/: _app.js  index.tsx
styles/: globals.css
supabase/: config.toml
(+409 files in other folders)
