[package]
name = "mint"
version = "1.0.0"
authors = [ "pz" ]
edition = "2018"

[dependencies]
http = "0.1"
vercel_lambda = "*"
anyhow = "1"
candid = "0.7"
cid = "0.7"
dialoguer = "0.9"
garcon = "0.2"
hex = "0.4"
ic-agent = "0.11"
mime_guess = "2"
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
uriparse = "0.6"
env_logger = "*"
log = "*"
url = "*"
auris = "*"

  [dependencies.clap]
  version = "3"
  features = [ "derive" ]

  [dependencies.serde]
  version = "1"
  features = [ "derive" ]

  [dependencies.tokio]
  version = "1"
  features = [ "rt", "macros" ]

[[bin]]
name = "mint"
path = "/workspace/nft-links/frontend/api/icp/mint.rs"
